--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "browser-sync": "^3.0.2",
     "del": "^7.1.0",
     "gsap": "^3.12.5",
+    "gsap-trial": "^3.12.5",
     "gulp": "^4.0.2",
     "gulp-avif": "^1.1.1",
     "gulp-clean": "^0.4.0",
@@ -34,6 +35,7 @@
     "gulp-uglify-es": "^3.0.0",
     "gulp-webp": "^4.0.1",
     "jquery": "^3.7.1",
+    "locomotive-scroll": "^5.0.0-beta.21",
     "sass": "^1.79.3",
     "swiper": "^11.1.14",
     "terser-webpack-plugin": "^5.3.10",
